# ntr

./: README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: Editor.tsx  LineNumbers.tsx  MenuBar.tsx  StatusBar.tsx  TabBar.tsx  WorkspacePanel.tsx
src/components/dialogs/: CloseTabDialog.tsx  SettingsPanel.tsx
src/hooks/: useAutoSave.ts  useBeforeUnload.ts  useKeyboardShortcuts.ts
src/store/: appStore.ts  persistence.ts
src/styles/: theme.ts
src/types/: index.ts
src/utils/: caretPosition.ts  constants.ts  tauriCommands.ts
